<resources>
    <string name="app_name">Carrus</string>

    <!-- General -->
    <string name="home">Home</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="nickname">Nickname</string>
    <string name="year">Year</string>
    <string name="license_no">License No.</string>
    <string name="total_miles">Total Miles</string>
    <string name="miles_per_gallon">Miles per gallon</string>
    <string name="tire_pressure">Pressure</string>
    <string name="vin_no">VIN No.</string>
    <string name="color">Color</string>
    <string name="services">Services</string>
    <string name="details">Details</string>
    <string name="car_details">Car Details</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
...
    <string name="name">name</string>
    <string name="date">date</string>

    <!-- Overview -->
    <string name="car_name">Car Name</string>
    <string name="add_new_car">Add New Car</string>
    <string name="add_new_car_capitalized">ADD NEW CAR</string>
    <string name="menu_delete_car">Delete Car</string>
    <string name="menu_edit_car">Edit Car</string>
    <string name="menu_add_component">Add Component</string>
    <string name="no_services_scheduled">No services scheduled at this time</string>

    <!-- Create/Edit -->
    <string name="create_title">Add a new Car</string>
    <string name="add_a_photo">Add a Photo</string>
    <string name="more_details">More Details</string>
    <string name="less_details">Less Details</string>
...
    <!-- Service -->
    <string name="new_service">New Service</string>
    <string name="edit_service">Edit Service</string>
    <string name="service_name">Service name</string>
    <string name="repair_date">Repair date</string>
    <string name="due_date">Due date</string>
    <string name="service_brand">Service material brand</string>
    <string name="service_type">Service material type/specs</string>
    <string name="service_price">Service price</string>
    <string name="service_scheduled">Service scheduled</string>
    <string name="service_date_format">%1$d/%2$d/%3$d</string>
    <string name="service_repair_date_format">on %s</string>
    <string name="service_due_date_week_format">%s weeks</string>
    <string name="service_due_date_months_format">%s mo.</string>

...
