...
            dueDate = Calendar.getInstance()
        )

        val serviceList: List<Service> = listOf(
            Service(
                id = "1",
                name = "alpha",
                repairDate = Calendar.getInstance(),
                dueDate = Calendar.getInstance().apply {
                    add(Calendar.DAY_OF_MONTH, 7)
                },
                brand = "the brand",
                type = "type & spec",
...
                        postalCode = "94107"
                    )
                )
            ),
            Service(
                id = "2",
                name = "zetta",
                repairDate = Calendar.getInstance().apply {
                    add(Calendar.MONTH, -1)
                },
                dueDate = Calendar.getInstance().apply {
                    add(Calendar.MONTH, 1)
                },
...
                        postalCode = "94107"
                    )
                )
            ),
            Service(
                id = "3",
                name = "omega",
                repairDate = Calendar.getInstance().apply {
                    add(Calendar.MONTH, -1)
                },
                dueDate = Calendar.getInstance().apply {
                    add(Calendar.MONTH, -1)
                    add(Calendar.DAY_OF_MONTH, 1)
...
