...
            milesPerGalCity = "",
            milesPerGalHighway = "",
            services = emptyList()
        )
        val default: Car = Car(
            uid = "123",
            nickname = "Shaq",
            make = "Chevrolet",
            model = "Malibu",
            year = "2009",
            licenseState = "Texas",
            licenseNo = "IGB123",
            vinNo = "123ABC456HIJ78Z",
...
