# The purpose of this script is to identify the entire Overview screen, given the
# 'base Car' scenario to start with.
appId: com.ivangarzab.carrus.debug
---
- runFlow: # make sure we've on the Overview screen
    when:
      notVisible:
        text: "Details"
    commands:
      - tapOn: "Home"
- runFlow: # make sure there's car data
    when:
      visible:
        text: "ADD NEW CAR"
    file: "flow_creation_quick.yaml"
- runFlow: # make sure there's service list data
    when:
      visible:
        text: "No services scheduled at this time"
    file: "flow_service_list_create_quick.yaml"
- runFlow:
    file: "flow_overview_identify.yaml"
    env:
      alt: true
- assertVisible:
    id: "Large Top Bar"
- assertVisible: "Shaq"
- "scroll"
- assertVisible: "alpha"
- runFlow: # double check actual due date
    when: #TODO: Fix having to make this check
      visible:
        text: "7 days"
    commands:
      - assertVisible: "7 days"
- assertVisible: "zetta"
- assertVisible: "DUE"
- assertVisible: "omega"
- assertVisible: "30 days"
- tapOn: Dropdown arrow icon
- "scroll"
- tapOn:
    text: Dropdown arrow icon
    index: 2
- tapOn: Edit icon button
- tapOn: omega
- "eraseText"
- inputText: phi
- "back"
- tapOn: Submit
- tapOn: Delete icon button
- runFlow: "flow_service_create_quick.yaml"